# DanskUddannelse

./: LICENSE  README.md
verbs/: Cargo.toml
verbs/src/: main.rs  verbs.json
